Perma build bustage at src/security/manager/ssl/CertBlocklist.cpp when Gecko 72 merges to Beta on 2019-12-02
Categories
(Core :: Security: PSM, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox70 | --- | unaffected |
firefox71 | --- | unaffected |
firefox72 | + | verified |
People
(Reporter: apavel, Assigned: n.nethercote)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Central as Beta simulation:
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=274207243&repo=try&lineNumber=22795
[task 2019-11-02T10:37:23.642Z] 10:37:23 INFO - accessible/atk/nsMaiInterfaceImage.i_o
[task 2019-11-02T10:37:23.642Z] 10:37:23 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/accessible/atk'
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/security/manager/ssl'
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - /builds/worker/fetches/clang/bin/clang++ -o Unified_cpp_security_manager_ssl0.i_o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/stl_wrappers -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DSSL_DISABLE_DEPRECATED_CIPHER_SUITE_NAMES=True -DNSS_ENABLE_ECC=True -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/worker/workspace/build/src/security/manager/ssl -I/builds/worker/workspace/build/src/obj-firefox/security/manager/ssl -I/builds/worker/workspace/build/src/dom/base -I/builds/worker/workspace/build/src/dom/crypto -I/builds/worker/workspace/build/src/netwerk/base -I/builds/worker/workspace/build/src/security/certverifier -I/builds/worker/workspace/build/src/obj-firefox/dist/public/nss -I/builds/worker/workspace/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -I/builds/worker/workspace/build/src/ipc/chromium/src -I/builds/worker/workspace/build/src/ipc/glue -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/mozilla-config.h -Qunused-arguments -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++1z-compat -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -Wno-return-type-c-linkage -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/build/src/obj-firefox/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fomit-frame-pointer -funwind-tables -Werror -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -Wextra -Wno-missing-field-initializers -Wno-unused-parameter -DNS_FREE_PERMANENT_DATA=1 -fprofile-generate -MD -MP -MF .deps/Unified_cpp_security_manager_ssl0.i_o.pp Unified_cpp_security_manager_ssl0.cpp
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - In file included from Unified_cpp_security_manager_ssl0.cpp:11:
[task 2019-11-02T10:37:24.410Z] 10:37:24 ERROR - /builds/worker/workspace/build/src/security/manager/ssl/CertBlocklist.cpp:128:3: error: no matching function for call to 'UnregisterCallback'
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - Preferences::UnregisterCallback(CertBlocklist::PreferenceChanged,
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/Preferences.h:356:19: note: candidate function template not viable: no known conversion from 'void (const char *, CertBlocklist )' to 'PrefChangedFunc' (aka 'void ()(const char *, void *)') for 1st argument
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - static nsresult UnregisterCallback(PrefChangedFunc aCallback,
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - ^
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/Preferences.h:268:19: note: candidate function template not viable: no known conversion from 'void (const char *, CertBlocklist )' to 'PrefChangedFunc' (aka 'void ()(const char *, void *)') for 1st argument
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - static nsresult UnregisterCallback(PrefChangedFunc aCallback,
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - ^
[task 2019-11-02T10:37:24.410Z] 10:37:24 INFO - /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/Preferences.h:545:19: note: candidate function not viable: requires 4 arguments, but 3 were provided
[task 2019-11-02T10:37:24.412Z] 10:37:24 INFO - static nsresult UnregisterCallback(PrefChangedFunc aCallback,
[task 2019-11-02T10:37:24.412Z] 10:37:24 INFO - ^
[task 2019-11-02T10:37:24.412Z] 10:37:24 INFO - /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/Preferences.h:573:19: note: candidate function not viable: requires 4 arguments, but 3 were provided
[task 2019-11-02T10:37:24.412Z] 10:37:24 INFO - static nsresult UnregisterCallback(PrefChangedFunc aCallback,
[task 2019-11-02T10:37:24.412Z] 10:37:24 INFO - ^
[task 2019-11-02T10:37:24.412Z] 10:37:24 INFO - In file included from Unified_cpp_security_manager_ssl0.cpp:11:
[task 2019-11-02T10:37:24.412Z] 10:37:24 ERROR - /builds/worker/workspace/build/src/security/manager/ssl/CertBlocklist.cpp:130:3: error: no matching function for call to 'UnregisterCallback'
Nicholas please take a look.
![]() |
Assignee | |
Comment 1•6 years ago
|
||
This code is compiled when MOZ_NEW_CERT_STORAGE
is not defined, which is the
case on beta.
![]() |
Assignee | |
Updated•6 years ago
|
Updated•6 years ago
|
Comment 3•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Comment 4•6 years ago
|
||
Verified fixed as of latest central as beta simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception&revision=9be0afd3ae2983d15a75b46ef0c7510e65f4fc4b
Updated•4 years ago
|
Updated•4 years ago
|
Description
•