Bug 1593426 - Fix a case missed in bug 1587162. r=erahm

This code is compiled when `MOZ_NEW_CERT_STORAGE` is not defined, which is the
case on beta.

Differential Revision: https://phabricator.services.mozilla.com/D51559